--- a/projects.html
+++ b/projects.html
@@ -44,8 +44,7 @@
         <!-- HERO (light, full-screen) -->
         <section class="pt-24 lg:pt-20 pb-8 min-h-[calc(100vh-88px)] flex items-center">
             <div class="max-w-7xl mx-auto px-6 w-full">
-                <div class="grid grid-cols-1 lg:grid-cols-12 gap-10 items-center">
-                    <div class="lg:col-span-6">
+                <div class="max-w-4xl">
                         <ol class="flex flex-wrap items-center gap-2 text-[11px] font-black uppercase tracking-[0.22em] text-slate-500 mb-6"
                             aria-label="breadcrumbs">
                             <li><a href="index.html" class="hover:text-accent transition">Главная</a></li>
@@ -56,6 +55,14 @@
                         <h1 class="text-5xl md:text-7xl font-black mb-6 leading-[1.02] uppercase tracking-tighter">
                             Проекты
                         </h1>
+
+                        <div
+                            class="projects-media relative overflow-hidden border border-slate-900/10 bg-white/40 backdrop-blur-md shadow-[0_28px_80px_rgba(15,23,42,0.10)] mb-8">
+                            <div class="aspect-[16/10] w-full relative">
+                                <img src="assets/site-photos/projects/projects-hero.png" alt="Энергоцентр"
+                                    class="absolute inset-0 w-full h-full object-cover">
+                            </div>
+                        </div>
 
                         <p class="text-lg md:text-xl text-slate-600 leading-relaxed max-w-2xl">
                             Проектируем и строим энергоцентры, выполняем поставку, ПНР и сервис. Ниже собраны
@@ -146,17 +153,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-
-	                    <div class="lg:col-span-6">
-	                        <div
-		                            class="projects-media relative overflow-hidden border border-slate-900/10 bg-white/40 backdrop-blur-md shadow-[0_28px_80px_rgba(15,23,42,0.10)]">
-	                            <div class="aspect-square w-full">
-	                                <img src="assets/site-photos/projects/projects-hero.png" alt="Энергоцентр"
-	                                    class="absolute inset-0 w-full h-full object-cover">
-	                            </div>
-	                        </div>
-                    </div>
                 </div>
             </div>
         </section>
