--- a/catalog.html
+++ b/catalog.html
@@ -415,87 +415,66 @@
 	                        <div id="gpu-filter-section" class="pt-4 border-t border-slate-200/70 text-xs font-black uppercase tracking-[0.22em] text-slate-900 pl-2">
 	                            Фильтр
 	                        </div>
-	                        <fieldset>
-	                            <legend class="text-[12px] font-black text-slate-900 tracking-[0.18em] mb-2">
-	                                Тип
-	                            </legend>
-	                            <div class="flex flex-wrap gap-2">
-	                                <label class="gpu-chip cursor-pointer">
-	                                    <input class="sr-only" type="radio" name="gpu-type" value="all" checked>
-	                                    <span
-	                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
-	                                        Все
-	                                    </span>
-	                                </label>
-	                                <label class="gpu-chip cursor-pointer">
-	                                    <input class="sr-only" type="radio" name="gpu-type" value="base">
-	                                    <span
-	                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
-	                                        Базовый
-	                                    </span>
-	                                </label>
-	                                <label class="gpu-chip cursor-pointer">
-	                                    <input class="sr-only" type="radio" name="gpu-type" value="mod">
-	                                    <span
-	                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
-	                                        Модифицированный
-	                                    </span>
-	                                </label>
-	                            </div>
-	                        </fieldset>
+		                        <fieldset>
+		                            <legend class="text-[12px] font-black text-slate-900 tracking-[0.18em] mb-2">
+		                                Тип
+		                            </legend>
+		                            <div class="flex flex-wrap gap-2">
+		                                <label class="gpu-chip cursor-pointer">
+		                                    <input class="sr-only" type="checkbox" name="gpu-type" value="base">
+		                                    <span
+		                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
+		                                        Базовый
+		                                    </span>
+		                                </label>
+		                                <label class="gpu-chip cursor-pointer">
+		                                    <input class="sr-only" type="checkbox" name="gpu-type" value="mod">
+		                                    <span
+		                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
+		                                        Модифицированный
+		                                    </span>
+		                                </label>
+		                            </div>
+		                        </fieldset>
 
-	                        <fieldset>
-	                            <legend class="text-[12px] font-black text-slate-900 tracking-[0.18em] mb-2">
-	                                Газ
-	                            </legend>
-	                            <div class="flex flex-wrap gap-2">
-	                                <label class="gpu-chip cursor-pointer">
-	                                    <input class="sr-only" type="radio" name="gpu-gas" value="any" checked>
-	                                    <span
-	                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
-	                                        Любой
-	                                    </span>
-	                                </label>
-	                                <label class="gpu-chip cursor-pointer">
-	                                    <input class="sr-only" type="radio" name="gpu-gas" value="apg">
-	                                    <span
-	                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
-	                                        Попутный нефтяной газ
-	                                    </span>
-	                                </label>
-	                                <label class="gpu-chip cursor-pointer">
-	                                    <input class="sr-only" type="radio" name="gpu-gas" value="pipe_ng">
-	                                    <span
-	                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
-	                                        Трубный природный газ
-	                                    </span>
-	                                </label>
-	                                <label class="gpu-chip cursor-pointer">
-	                                    <input class="sr-only" type="radio" name="gpu-gas" value="var">
-	                                    <span
-	                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
-	                                        Газ переменного состава
-	                                    </span>
-	                                </label>
-	                            </div>
-	                        </fieldset>
+		                        <fieldset>
+		                            <legend class="text-[12px] font-black text-slate-900 tracking-[0.18em] mb-2">
+		                                Газ
+		                            </legend>
+		                            <div class="flex flex-wrap gap-2">
+		                                <label class="gpu-chip cursor-pointer">
+		                                    <input class="sr-only" type="checkbox" name="gpu-gas" value="apg">
+		                                    <span
+		                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
+		                                        Попутный нефтяной газ
+		                                    </span>
+		                                </label>
+		                                <label class="gpu-chip cursor-pointer">
+		                                    <input class="sr-only" type="checkbox" name="gpu-gas" value="pipe_ng">
+		                                    <span
+		                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
+		                                        Трубный природный газ
+		                                    </span>
+		                                </label>
+		                                <label class="gpu-chip cursor-pointer">
+		                                    <input class="sr-only" type="checkbox" name="gpu-gas" value="var">
+		                                    <span
+		                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
+		                                        Газ переменного состава
+		                                    </span>
+		                                </label>
+		                            </div>
+		                        </fieldset>
 
-	                        <fieldset>
-	                            <legend class="text-[12px] font-black text-slate-900 tracking-[0.18em] mb-2">
-	                                Исполнение
-	                            </legend>
-	                            <div class="flex flex-wrap gap-2">
-	                                <label class="gpu-chip cursor-pointer">
-	                                    <input class="sr-only" type="checkbox" name="gpu-exec" value="any" checked>
-	                                    <span
-	                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
-	                                        Любое
-	                                    </span>
-	                                </label>
-	                                <label class="gpu-chip cursor-pointer">
-	                                    <input class="sr-only" type="checkbox" name="gpu-exec" value="open">
-	                                    <span
-	                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
+		                        <fieldset>
+		                            <legend class="text-[12px] font-black text-slate-900 tracking-[0.18em] mb-2">
+		                                Исполнение
+		                            </legend>
+		                            <div class="flex flex-wrap gap-2">
+		                                <label class="gpu-chip cursor-pointer">
+		                                    <input class="sr-only" type="checkbox" name="gpu-exec" value="open">
+		                                    <span
+		                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
 	                                        Открытая рама
 	                                    </span>
 	                                </label>
@@ -516,22 +495,15 @@
 	                            </div>
 	                        </fieldset>
 
-	                        <fieldset>
-	                            <legend class="text-[12px] font-black text-slate-900 tracking-[0.18em] mb-2">
-	                                Отрасль
-	                            </legend>
-	                            <div class="flex flex-wrap gap-2">
-	                                <label class="gpu-chip cursor-pointer">
-	                                    <input class="sr-only" type="checkbox" name="gpu-industry" value="any" checked>
-	                                    <span
-	                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
-	                                        Любая
-	                                    </span>
-	                                </label>
-	                                <label class="gpu-chip cursor-pointer">
-	                                    <input class="sr-only" type="checkbox" name="gpu-industry" value="industry">
-	                                    <span
-	                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
+		                        <fieldset>
+		                            <legend class="text-[12px] font-black text-slate-900 tracking-[0.18em] mb-2">
+		                                Отрасль
+		                            </legend>
+		                            <div class="flex flex-wrap gap-2">
+		                                <label class="gpu-chip cursor-pointer">
+		                                    <input class="sr-only" type="checkbox" name="gpu-industry" value="industry">
+		                                    <span
+		                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
 	                                        Промышленность
 	                                    </span>
 	                                </label>
@@ -573,22 +545,15 @@
 	                            </div>
 	                        </fieldset>
 
-	                        <fieldset>
-	                            <legend class="text-[12px] font-black text-slate-900 tracking-[0.18em] mb-2">
-	                                Макс. мощность (кВт)
-	                            </legend>
-	                            <div class="flex flex-wrap gap-2">
-	                                <label class="gpu-chip cursor-pointer">
-	                                    <input class="sr-only" type="checkbox" name="gpu-power-nom" value="any" checked>
-	                                    <span
-	                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
-	                                        Любая
-	                                    </span>
-	                                </label>
-	                                <label class="gpu-chip cursor-pointer">
-	                                    <input class="sr-only" type="checkbox" name="gpu-power-nom" value="90">
-	                                    <span
-	                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
+		                        <fieldset>
+		                            <legend class="text-[12px] font-black text-slate-900 tracking-[0.18em] mb-2">
+		                                Макс. мощность (кВт)
+		                            </legend>
+		                            <div class="flex flex-wrap gap-2">
+		                                <label class="gpu-chip cursor-pointer">
+		                                    <input class="sr-only" type="checkbox" name="gpu-power-nom" value="90">
+		                                    <span
+		                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
 	                                        90
 	                                    </span>
 	                                </label>
@@ -630,22 +595,15 @@
 	                            </div>
 	                        </fieldset>
 
-	                        <fieldset>
-	                            <legend class="text-[12px] font-black text-slate-900 tracking-[0.18em] mb-2">
-	                                Постоянная мощность (кВт)
-	                            </legend>
-	                            <div class="flex flex-wrap gap-2">
-	                                <label class="gpu-chip cursor-pointer">
-	                                    <input class="sr-only" type="checkbox" name="gpu-power-cont" value="any" checked>
-	                                    <span
-	                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
-	                                        Любая
-	                                    </span>
-	                                </label>
-	                                <label class="gpu-chip cursor-pointer">
-	                                    <input class="sr-only" type="checkbox" name="gpu-power-cont" value="65">
-	                                    <span
-	                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
+		                        <fieldset>
+		                            <legend class="text-[12px] font-black text-slate-900 tracking-[0.18em] mb-2">
+		                                Постоянная мощность (кВт)
+		                            </legend>
+		                            <div class="flex flex-wrap gap-2">
+		                                <label class="gpu-chip cursor-pointer">
+		                                    <input class="sr-only" type="checkbox" name="gpu-power-cont" value="65">
+		                                    <span
+		                                        class="inline-flex items-center px-3 py-2 rounded-xl border border-slate-200 bg-white/60 text-slate-900 text-[11px] font-black uppercase tracking-wider transition hover:bg-white">
 	                                        65
 	                                    </span>
 	                                </label>
